# Heads-I-Win-Tails-You-Lose-Lab

./: CMakeLists.txt  main.cpp
src/: biasedCoin.cpp  biasedCoin.hpp
tests/: biasedCoin_test.cpp
